Bug fixing. Added changesets and attachments links to TFS.

--- a/Timeline.Shell/MainWindow.xaml
+++ b/Timeline.Shell/MainWindow.xaml
@@ -17,7 +17,7 @@
 		<Menu>
 			<MenuItem Header="Change" Click="MenuItem_MouseUp"></MenuItem>
 		</Menu>
-		<fieldsDecorator:SelectionDecorator SelectedItems="{Binding Source={StaticResource controller}, Path=Selection}" Grid.Row="1">
+		<fieldsDecorator:SelectionDecorator SelectedItems="{Binding Source={StaticResource controller}, Path=Selection}"  timeline:ControlTimeLine.Controller="{StaticResource controller}" Grid.Row="1">
 			<Grid>
 				<Grid.RowDefinitions>
 					<RowDefinition Height="*"></RowDefinition>
