--- a/WorkItemViewExt/WorkItemTimeline/Controls/ControlTimelinePane.xaml
+++ b/WorkItemViewExt/WorkItemTimeline/Controls/ControlTimelinePane.xaml
@@ -15,13 +15,17 @@
 	<fieldsDecorator:SelectionDecorator SelectedItems="{Binding Source={StaticResource controller}, Path=Selection}" timeline:ControlTimeLine.Controller="{StaticResource controller}" Grid.Row="1">
 		<Grid>
 			<Grid.RowDefinitions>
-				<RowDefinition Height="*"></RowDefinition>
-				<RowDefinition Height="4"></RowDefinition>
-				<RowDefinition Height="*"></RowDefinition>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="4" />
+				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
-			<timeline:ControlTimeLine Grid.Row="0" Items="{Binding Items}" timeline:ControlTimeLine.Controller="{StaticResource controller}"></timeline:ControlTimeLine>
-			<GridSplitter Grid.Row="1" Height="4" HorizontalAlignment="Stretch"></GridSplitter>
-			<fields:ControlRevisionsView Grid.Row="2" ItemsSource="{Binding Source={StaticResource controller}, Path=Selection}" timeline:ControlTimeLine.Controller="{StaticResource controller}"></fields:ControlRevisionsView>
+			<Menu Grid.Row="0">
+				<MenuItem Header="Display fields" Click="DisplayFieldsClick"></MenuItem>
+			</Menu>
+			<timeline:ControlTimeLine Grid.Row="1" Items="{Binding Items}" timeline:ControlTimeLine.Controller="{StaticResource controller}"></timeline:ControlTimeLine>
+			<GridSplitter Grid.Row="2" Height="4" HorizontalAlignment="Stretch"></GridSplitter>
+			<fields:ControlRevisionsView Grid.Row="3" ItemsSource="{Binding Source={StaticResource controller}, Path=Selection}" timeline:ControlTimeLine.Controller="{StaticResource controller}"></fields:ControlRevisionsView>
 		</Grid>
 	</fieldsDecorator:SelectionDecorator>
 </UserControl>
